[KARAF-3391] Use JVM built-in support for base 64